syntax = "proto3";

option go_package = "./server;server";

service Balancer{
  rpc GetUrl (RequestBody) returns (ResponseBody);
}

message ResponseBody{
  string url = 1;
}

message RequestBody {
  int64 increment = 1;
  string video = 2;
}

